--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <html>
-    <head>Rurikoのコーヒータイム</head>
+    <head>
+        <title>Rurikoのコーヒータイム</title>
+    </head>
     <body>
         <p>0w0</p>
         <img src="rr.jpg" alt="好像失败了( ˙-˙ )" title="rr"/>
