--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
     </head>
     <body>
         <p>0w0</p>
-        <img src="rr.jpg" alt="好像失败了( ˙-˙ )" title="moe, moe, nya~"/>
+        <img src="rr.jpg" width="500" alt="好像失败了( ˙-˙ )" title="moe, moe, nya~"/>
     </body>
 </html>
