--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
         <title>Rurikoのコーヒータイム</title>
     </head>
     <body>
-        <h1>Rurikoのコーヒータイム</h1>
+        <h1>Ruriko</h1>
         <p>0w0</p>
         <img src="rr.jpg" width="500" alt="好像失败了( ˙-˙ )" title="moe, moe, nya~"/>
         <p>个人邮箱：<a href="mailto:0w0@ruriko.moe">0w0@ruriko.moe</a>
