--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <html>
     <head>
+        <link rel="shortcut icon" href="favicon.ico">
         <title>Rurikoのコーヒータイム</title>
     </head>
     <body>
         <h1>Rurikoのコーヒータイム</h1>
         <p>0w0</p>
-        <img src="rr.jpg" width="400" alt="加载好像失败了( ˙-˙ )" title="moe, moe, nya~"/>
+        <img src="rr.jpg" width="500" alt="好像失败了( ˙-˙ )" title="moe, moe, nya~"/>
         <p>个人邮箱：<a href="mailto:0w0@ruriko.moe">0w0@ruriko.moe</a>
         </p>
     </body>
