--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
     </head>
     <body>
         <h1>Rurikoのコーヒータイム</h1>
-        <p>0w0</p>
-        <img src="rr.jpg" width="500" alt="好像加载失败了( ˙-˙ )" title="moe, moe, nya~"/>
+        <p>0w0<br/>
+        正在写的<a href="https://cn.overleaf.com/read/bgzrcxgmvpsk">量子力学笔记</a></p>
+        <img src="rr.jpg" width="500" alt="好像失败了( ˙-˙ )" title="moe, moe, nya~"/>
         <p>个人邮箱：<a href="mailto:0w0@ruriko.moe">0w0@ruriko.moe</a>
         </p>
     </body>
