--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <p>0w0<br/>
         正在写的<a href="https://cn.overleaf.com/read/bgzrcxgmvpsk">量子力学笔记</a></p>
         <img src="rr.jpg" width="500" alt="好像失败了( ˙-˙ )" title="moe, moe, nya~"/>
-        <p>个人邮箱：<a href="mailto:0w0@ruriko.moe">0w0@ruriko.moe</a>
+        <p>个人邮箱：<a href="mailto:0w0@ruriko.moe">0w0@ruriko.moe</a>/<a href="mailto:mygo@soyor.in">mygo@soyor.in</a>
         </p>
     </body>
 </html>
