--- a/index.html
+++ b/index.html
@@ -814,7 +814,9 @@ input {
 }
 
 
-</style><title># teru☆のコーヒータイム</title>
+</style>
+<link rel="shortcut icon" href="favicon.ico">
+<title>teru☆のコーヒータイム</title>
 </head>
 <body class='typora-export os-windows'><div class='typora-export-content'>
 <div id='write'  class=''><h1 align="center"> teru☆のコーヒータイム </h1><center>「どうしたら永遠になれると思う？」</center><p><img src="rr.jpg"  alt="かわきた" width="500"></p><p><span>contact: </span><a href='mailto:0w0@ruriko.moe'><span>0w0@ruriko.moe</span></a></p></div></div>
