--- a/index.html
+++ b/index.html
@@ -819,6 +819,6 @@ input {
 <title>teru☆のコーヒータイム</title>
 </head>
 <body class='typora-export os-windows'><div class='typora-export-content'>
-<div id='write'  class=''><h1 align="center"> teru☆のコーヒータイム </h1><center>「どうしたら永遠になれると思う？」</center><p><img src="rr.jpg"  alt="かわきた" width="500"></p><p><span>contact: </span><a href='mailto:0w0@ruriko.moe'><span>0w0@ruriko.moe</span></a></p><p><a href='Schrodinger.html'><span>A short derivation of Schrödinger equation</span></a></p><p><a href='PathIntegral.svg'><span>Some notes on path integral and DQMC</span></a></p></div></div>
+<div id='write'  class=''><h1 align="center"> teru☆のコーヒータイム </h1><center>「どうしたら永遠になれると思う？」</center><p><img src="rr.jpg"  alt="かわきた" width="500"></p><p><span>contact: </span><a href='mailto:0w0@ruriko.moe'><span>0w0@ruriko.moe</span></a></p><p><a href='Schrodinger Equation.svg'><span>A short derivation of Schrödinger equation</span></a></p><p><a href='PathIntegral.svg'><span>Some notes on path integral and DQMC</span></a></p></div></div>
 </body>
 </html>
