--- a/index.html
+++ b/index.html
@@ -816,9 +816,9 @@ input {
 
 </style>
 <link rel="shortcut icon" href="favicon.ico">
-<title>Ave Mujicaのマスカレードへ… </title>
+<title>ようこそ、Ave Mujicaの世界へ… </title>
 </head>
 <body class='typora-export os-windows'><div class='typora-export-content'>
-<div id='write'  class=''><h1 align="center"> Ave Mujicaのマスカレードへ… </h1><center>「触れてしまった神聖な物　<br>  今夜、私の神話になって」</center><p><img src="rr.jpg"  alt="nya~" width="700"></p><p><span>contact: </span><a href='mailto:0w0@ruriko.moe'><span>0w0@ruriko.moe</span></a></p></div></div>
+<div id='write'  class=''><h1 align="center" style="color: #881144;"> さあ始めましょう、Ave Mujicaのマスカレードを！ </h1>  <center><p style="font-size: 20px;">「触れてしまった神聖な物  <br> 				 今夜、私の神話になって」</p></center> <p><img src="rr.jpg"  alt="nya~" width="700"></p><p><span>contact: </span><a href='mailto:0w0@ruriko.moe'><span>0w0@ruriko.moe</span></a></p></div></div>
 </body>
 </html>
